# language-lua

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  Language-Lua-Annotated-Parser.html  Language-Lua-Annotated-Simplify.html  Language-Lua-Annotated-Syntax.html  Language-Lua-Annotated.html  Language-Lua-Lexer.html  Language-Lua-Parser.html  Language-Lua-PrettyPrinter.html  Language-Lua-Syntax.html  Language-Lua-Token.html  Language-Lua-Types.html  Language-Lua.html  README.md  Text-Parsec-LTok.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-I.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  doc-index-W.html  doc-index.html  index-frames.html  index.html  (+15 more)
bench/: Main.hs
lua-5.2.2-tests/: all.lua  db.lua  files.lua  literals.lua  main.lua  math.lua  pm.lua  sort.lua  strings.lua
lua-5.3.1-tests/: all.lua  db.lua  files.lua  pm.lua  sort.lua  strings.lua
src/Language/: Lua.hs
src/Language/Lua/: Annotated.hs  Lexer.hs  Lexer.x  Parser.hs  PrettyPrinter.hs  StringLiteral.hs  Syntax.hs  Test.hs  Token.hs  Types.hs
src/Language/Lua/Annotated/: Lexer.x  Parser.hs  Simplify.hs  Syntax.hs
src/Text/Parsec/: LTok.hs
src/Text/PrettyPrint/: LICENSE  Leijen.hs
tests/: Main.hs  numbers  string-literal-roundtrip.lua  strings  test  test.lua
