Name:                language-lua

Description:
    Lua 5.2 lexer, parser and pretty-printer.

Version:             0.6.3.3
Synopsis:            Lua parser and pretty-printer
Homepage:            http://github.com/osa1/language-lua
Bug-reports:         http://github.com/osa1/language-lua/issues
License:             BSD3
License-file:        LICENSE
Author:              Ömer Sinan Ağacan
Maintainer:          omeragacan@gmail.com
Category:            Language
Build-type:          Simple
Stability:           Experimental
Cabal-version:       >= 1.9.2

Extra-source-files:  src/Text/PrettyPrint/LICENSE
                     tests/numbers
                     tests/strings
                     lua-5.2.2-tests/*.lua
                     README.md
                     CHANGELOG.md

Source-repository head
  Type:              git
  Location:          git://github.com/osa1/language-lua.git

Library
  Hs-source-dirs:    src

  Exposed-modules:   Language.Lua
                     Language.Lua.Token
                     Language.Lua.Syntax
                     Language.Lua.Parser
                     Language.Lua.PrettyPrinter
                     Language.Lua.Annotated
                     Language.Lua.Annotated.Syntax
                     Language.Lua.Annotated.Parser
                     Language.Lua.Annotated.Lexer
                     Language.Lua.Annotated.Simplify
                     Text.Parsec.LTok

  Other-modules:     Text.PrettyPrint.Leijen

  Build-depends:     base >= 4.5 && < 4.9,
                     deepseq,
                     array >= 0.4 && < 0.6,
                     mtl >= 2.0 && < 2.3,
                     parsec >= 3.1.3 && < 3.2,
                     safe >= 0.3 && < 0.4

  Build-tools:       alex

  ghc-options:       -Wall

Test-Suite tests
  Type:              exitcode-stdio-1.0
  Hs-source-dirs:    tests
  Main-is:           Main.hs
  Build-depends:     base >= 4.5 && < 4.9,
                     deepseq,
                     directory,
                     filepath,
                     language-lua,
                     parsec >= 3.1.8 && < 3.2,
                     QuickCheck,
                     tasty,
                     tasty-hunit,
                     tasty-quickcheck

  ghc-options:       -Wall

Benchmark bench
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  main-is:           Main.hs
  hs-source-dirs:    bench
  ghc-options:       -Wall

  build-depends:     base,
                     criterion,
                     directory,
                     filepath,
                     language-lua
