Name:                language-lua

Description:
    Lua 5.3 lexer, parser and pretty-printer.

Version:             0.8.0
Synopsis:            Lua parser and pretty-printer
Homepage:            http://github.com/osa1/language-lua
Bug-reports:         http://github.com/osa1/language-lua/issues
License:             BSD3
License-file:        LICENSE
Author:              Ömer Sinan Ağacan
Maintainer:          Ömer Sinan Ağacan <omeragacan@gmail.com>, Eric Mertens <emertens@gmail.com>
Category:            Language
Build-type:          Simple
Stability:           Experimental
Cabal-version:       >= 1.10

Extra-source-files:  src/Text/PrettyPrint/LICENSE
                     tests/numbers
                     tests/strings
                     tests/string-literal-roundtrip.lua
                     lua-5.3.1-tests/*.lua
                     README.md
                     CHANGELOG.md

Source-repository head
  Type:              git
  Location:          git://github.com/osa1/language-lua.git

Library
  Hs-source-dirs:    src
  Default-language:  Haskell2010

  Exposed-modules:   Language.Lua
                     Language.Lua.Token
                     Language.Lua.StringLiteral
                     Language.Lua.Syntax
                     Language.Lua.Parser
                     Language.Lua.PrettyPrinter
                     Language.Lua.Annotated
                     Language.Lua.Annotated.Syntax
                     Language.Lua.Annotated.Parser
                     Language.Lua.Annotated.Lexer
                     Language.Lua.Annotated.Simplify
                     Text.Parsec.LTok

  Other-modules:     Text.PrettyPrint.Leijen

  Build-depends:     base >= 4.5 && < 4.9,
                     deepseq,
                     array >= 0.4 && < 0.6,
                     bytestring >= 0.10 && < 0.11,
                     mtl >= 2.0 && < 2.3,
                     parsec >= 3.1.3 && < 3.2

  Build-tools:       alex

  ghc-options:       -Wall

Test-Suite tests
  Type:              exitcode-stdio-1.0
  Default-language:  Haskell2010
  Hs-source-dirs:    tests
  Main-is:           Main.hs
  Build-depends:     base >= 4.5 && < 4.9,
                     deepseq,
                     directory,
                     filepath,
                     language-lua,
                     parsec >= 3.1.8 && < 3.2,
                     bytestring >= 0.10 && < 0.11,
                     QuickCheck,
                     tasty,
                     tasty-hunit,
                     tasty-quickcheck

  ghc-options:       -Wall

Benchmark bench
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  main-is:           Main.hs
  hs-source-dirs:    bench
  ghc-options:       -Wall

  build-depends:     base,
                     criterion,
                     directory,
                     filepath,
                     language-lua
